# timebank-server

./: .env  Cargo.toml  Dockerfile  build.rs
proto/: account.proto  auth.proto  generic.proto  service-request.proto
src/: proto.rs  server.rs  services.rs
src/services/: account.rs  auth.rs  collection.rs  service_request.rs
src/services/collection/: service_rating.rs  service_request.rs  service_request_bid.rs
