[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] 
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
prost-types = "0.10"
dotenv = "0.15.0"
postgrest = "1.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json"] }

[build-dependencies] 
tonic-build = "0.7.2"

